openspec/changes/decompose-next-five-crate-families-implementation/evidence/i9-jobs-ci-fixtures.txt
$ cargo test --manifest-path openspec/changes/decompose-next-five-crate-families-implementation/fixtures/jobs-ci-core-portable-smoke/Cargo.toml
   Compiling libc v0.2.186
   Compiling serde_json v1.0.149
   Compiling serde v1.0.228
   Compiling snafu v0.8.9
   Compiling aspen-jobs-protocol v0.1.0 (/home/brittonr/git/aspen/crates/aspen-jobs-protocol)
   Compiling getrandom v0.4.2
   Compiling schemars v0.8.22
   Compiling uuid v1.23.1
   Compiling aspen-ci-core v0.1.0 (/home/brittonr/git/aspen/crates/aspen-ci-core)
   Compiling jobs-ci-core-portable-smoke v0.1.0 (/home/brittonr/git/aspen/openspec/changes/decompose-next-five-crate-families-implementation/fixtures/jobs-ci-core-portable-smoke)
    Finished `test` profile [unoptimized + debuginfo] target(s) in 1.27s
     Running unittests src/lib.rs (target/debug/deps/jobs_ci_core_portable_smoke-85468aa7583b6bad)

running 1 test
test tests::portable_jobs_ci_core_surface_works ... ok

test result: ok. 1 passed; 0 failed; 0 ignored; 0 measured; 0 filtered out; finished in 0.00s

   Doc-tests jobs_ci_core_portable_smoke

running 0 tests

test result: ok. 0 passed; 0 failed; 0 ignored; 0 measured; 0 filtered out; finished in 0.00s

$ cargo check --manifest-path openspec/changes/decompose-next-five-crate-families-implementation/fixtures/jobs-ci-runtime-negative/Cargo.toml (expected failure)
    Updating crates.io index
     Locking 79 packages to latest Rust 1.97.0-nightly compatible versions
    Checking jobs-ci-runtime-negative v0.1.0 (/home/brittonr/git/aspen/openspec/changes/decompose-next-five-crate-families-implementation/fixtures/jobs-ci-runtime-negative)
error[E0432]: unresolved import `aspen_ci`
 --> src/lib.rs:4:5
  |
4 | use aspen_ci::PipelineRunner;
  |     ^^^^^^^^ use of unresolved module or unlinked crate `aspen_ci`
  |
  = help: if you wanted to use a crate named `aspen_ci`, use `cargo add aspen_ci` to add it to your `Cargo.toml`

error[E0432]: unresolved import `aspen_ci_executor_nix`
 --> src/lib.rs:5:5
  |
5 | use aspen_ci_executor_nix::NixExecutor;
  |     ^^^^^^^^^^^^^^^^^^^^^ use of unresolved module or unlinked crate `aspen_ci_executor_nix`
  |
  = help: if you wanted to use a crate named `aspen_ci_executor_nix`, use `cargo add aspen_ci_executor_nix` to add it to your `Cargo.toml`

error[E0432]: unresolved import `aspen_ci_executor_shell`
 --> src/lib.rs:6:5
  |
6 | use aspen_ci_executor_shell::ShellExecutor;
  |     ^^^^^^^^^^^^^^^^^^^^^^^ use of unresolved module or unlinked crate `aspen_ci_executor_shell`
  |
  = help: if you wanted to use a crate named `aspen_ci_executor_shell`, use `cargo add aspen_ci_executor_shell` to add it to your `Cargo.toml`

error[E0432]: unresolved import `aspen_ci_executor_vm`
 --> src/lib.rs:7:5
  |
7 | use aspen_ci_executor_vm::VmExecutor;
  |     ^^^^^^^^^^^^^^^^^^^^ use of unresolved module or unlinked crate `aspen_ci_executor_vm`
  |
  = help: if you wanted to use a crate named `aspen_ci_executor_vm`, use `cargo add aspen_ci_executor_vm` to add it to your `Cargo.toml`

error[E0432]: unresolved import `aspen_ci_handler`
 --> src/lib.rs:8:5
  |
8 | use aspen_ci_handler::CiHandler;
  |     ^^^^^^^^^^^^^^^^ use of unresolved module or unlinked crate `aspen_ci_handler`
  |
  = help: if you wanted to use a crate named `aspen_ci_handler`, use `cargo add aspen_ci_handler` to add it to your `Cargo.toml`

error[E0432]: unresolved import `aspen_job_handler`
 --> src/lib.rs:9:5
  |
9 | use aspen_job_handler::JobHandler;
  |     ^^^^^^^^^^^^^^^^^ use of unresolved module or unlinked crate `aspen_job_handler`
  |
  = help: if you wanted to use a crate named `aspen_job_handler`, use `cargo add aspen_job_handler` to add it to your `Cargo.toml`

error[E0432]: unresolved import `aspen_jobs`
  --> src/lib.rs:10:5
   |
10 | use aspen_jobs::JobManager;
   |     ^^^^^^^^^^ use of unresolved module or unlinked crate `aspen_jobs`
   |
   = help: if you wanted to use a crate named `aspen_jobs`, use `cargo add aspen_jobs` to add it to your `Cargo.toml`

error[E0432]: unresolved import `aspen_jobs_worker_shell`
  --> src/lib.rs:11:5
   |
11 | use aspen_jobs_worker_shell::ShellWorker;
   |     ^^^^^^^^^^^^^^^^^^^^^^^ use of unresolved module or unlinked crate `aspen_jobs_worker_shell`
   |
   = help: if you wanted to use a crate named `aspen_jobs_worker_shell`, use `cargo add aspen_jobs_worker_shell` to add it to your `Cargo.toml`

For more information about this error, try `rustc --explain E0432`.
error: could not compile `jobs-ci-runtime-negative` (lib) due to 8 previous errors
OK: runtime negative fixture failed as expected
